# personalUse

./: .gitignore  AI_chat_log.txt
.VSCodeCounter/2025-08-08_13-18-35/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.continue/prompts/: new-prompt.yaml
CCpp/Data Struct/: 1weekquiz.cpp  MOOC_data_struct.cpp  dataStruct.c  dialogue.cpp  dsacpp_learn.cpp  experimental_design.cpp  jiwang_exam.cpp  runoob.cpp
CCpp/Tools/: ClipboardTools.cpp  FileManage.cpp  HighAccuracyCalcu.cpp  functions.cpp
CCpp/algorithm/: C_lang_website.cpp  Leecode.cpp  PTA.cpp  Standard_template.cpp  StdTept_test.cpp  acwing.cpp  caculat.cpp  dataStruct.cpp  labuladuo_terms.cpp  lanqiaobei.cpp  luogu.cpp  random.cpp  tempCodeRunnerFile.cpp  wushixiong.cpp
CCpp/cmake-projects/: CMakeLists.txt
CCpp/cmake-projects/include/: CSVReader.h  InputValidator.h  mysql_db.h  users.cpp  users.h
CCpp/cmake-projects/src/: CSVReader.cpp  main.cpp  mysql_db.cpp
CCpp/modernCpp/: ImageInFolderCount.cpp  cpp20feature.cpp  i18n_learn.cpp  temp.cpp
CCpp/modernCpp/lang/: en.txt  zh.txt
CCpp/projects/BookManagePlus/: CMakeLists.txt  CMakePresets.json  todo.md
CCpp/projects/BookManagePlus/configs/: all_text.json
CCpp/projects/BookManagePlus/include/: CLIEntry.h  MySQLDB.h  email_sender.h  identities.h  menu.h  service_locator.h  utils.h
CCpp/projects/BookManagePlus/scripts/: emailSender.py  email_sender_cli.py  today_weather.py
CCpp/projects/BookManagePlus/src/: CLIEntry.cpp  MySQLDB.cpp  email_sender.cpp  identities.cpp  main.cpp  menu.cpp  utils.cpp
CCpp/projects/CLI11learning/: CMakeLists.txt
CCpp/projects/CLI11learning/src/: main.cpp
CCpp/projects/CodeLinesCounter/: CMakeLists.txt  todo.md
CCpp/projects/CodeLinesCounter/include/: CLI_parser.h  counter.h  filter.h
CCpp/projects/CodeLinesCounter/src/: CLI_parser.cpp  counter.cpp  filter.cpp  main.cpp
CCpp/projects/CodeLinesCounter/test/innerFolder/: run.bat
CCpp/projects/DirectoryFromText/: CLI_version.cpp  another_struct.txt  hardcode_version.cpp  structure.txt
CCpp/projects/cpp-emain/: sender.py
CCpp/projects/temp-project/: example.cpp  main.cpp  regex_version.cpp
Cmake/: 1weekquiz.cpp  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Sickwag.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  output.vcxproj  output.vcxproj.filters
Drafts/: args.md  inputFile.md  make_args.cpp  outputFile.md  temp.md  文档文字.txt
Drafts/CCppOutput/: AI_chat_log.txt  library.txt  user.txt
Drafts/CLIScripts/: curDialog.ps1  lastCommand.ps1  lastCommandLog.ps1  learnBatch.bat  openFile.ps1  recordALL.ps1
Drafts/choreFiles/: sogouPhrase.txt
HTML/Learning/: GreedySnake.html  LearnHTMLRunoob.html  chicks.html  test.html
HTML/Projects/LoginRegPage/: LoginRegPage.css  LoginRegPage.html
HTML/src/html/: mercur.html  sun.html  venus.html
Pycharm/Projects/PythonProject1/: global_variant.py  main.py  openCamera.py  return_to_initial_state.py  task2.py  voice_Interaction.py
batch/personal_automate/: git_sync_ob&code.bat
java/primary_learn/: test.cpp
java/primary_learn/src/: App.java  ExamOriented.java  ExamOrientedTest.java  Main.java  tempCodeRunnerFile.java
javascript/: nomal.js
kotlin/src/: learn_kotlin.kt
python/Alien_invasion/: alien.py  alien_invasion.py  bullet.py  button.py  game_functions.py  game_stats.py  scoreboard.py  settings.py  ship.py
python/Alien_invasion/practice/: rain_drop.py
python/Pics/挑战杯/: 功能模块图.py  成本收益比分析图（ROI、盈亏平衡点）.py  数据对比图.py  用户增长预测图.py
python/Projects/: clipboard_saver.py  protect_eyes.py
python/Projects/AiCLIClient/: api_client.py  args.py  config.py  constants.py  conversation.py  history.py  main.py  prompt.py  utils.py
python/Projects/output/: clipboard_text_20250701_173130.txt
python/ScriptTools/: aliyun_translate.py  comment_translator.py  directory_structure.txt  emailSender.py  email_sender_cli.py  fetchWifiSavedonWindows.py  fileTreeImplement.py  get_baisi.py  get_heisi.py  moveFilesBySuffix.py  readDirectory.py  removeRepeatLines.py  remove_blank.py  scripts_manager.py  shortcutsRename.py  temp.py  today_weather.py  translate.py  writeByMyself.py
python/ScriptTools/api_test/: aliyun_translate.py  get_baisi.py  get_heisi.py  translate.py
python/ScriptTools/chore_scripts/: extractWprds.py  fileTreeImplement.py  readDirectory.py  scip_learning.py
python/chore/AI_chat/: chat.py  draft.py  main.py  menu.py  utils.py
python/chore/MyNoteBook/: diary_editor.py  main.py  requirements.txt
python/learnpy/: dialog_input.txt  from scratch xiaojiayu.py  learnpy.py  merge_excel_to_doc.py  tempCodeRunnerFile.py
sqlfiles/: Leetcode.sql  algorithm.sql  db_design_work.sql
temp_projects/MyTinyTools/CodeLinesCount/: CMakeLists.txt  CMakePresets.json  TODO
temp_projects/MyTinyTools/CodeLinesCount/include/: arg_parse.h  config.h  count.h  output.h  utils.h
temp_projects/MyTinyTools/CodeLinesCount/line-count-result/: linecount.csv  linecount.json  linecount.txt
temp_projects/MyTinyTools/CodeLinesCount/src/: arg_parse.cpp  config.cpp  count.cpp  main.cpp  output.cpp
temp_projects/MyTinyTools/CodeLinesCount/test_files/: test.cpp  test.js  test.py
temp_projects/MyTinyTools/CodeLinesCount/test_files/subdir/: another_test.cpp
temp_projects/MyTinyTools/CodeLinesCount/utils/: utils.cpp
temp_projects/clean_exclusion/: main.cpp
temp_projects/connect_mysql/: CMakeLists.txt  CMakePresets.json  main.cpp
temp_projects/front_backnd_interact/: CMakeLists.txt  CMakePresets.json  index.html  main.cpp  simple_server.py
temp_projects/network/: CMakeLists.txt  CMakePresets.json
temp_projects/network/src/: main.cpp  mysql.cpp
temp_projects/open_programs/: main.py
temp_projects/test-C-redis/: CMakeLists.txt  CMakePresets.json
temp_projects/test-C-redis/src/: main.cpp
temp_projects/test_hiredis/: CMakeLists.txt  README.md  hiredisFAQ.md  main.c  redis_test.cpp  redispp_test.cpp  test_all.bat
typescript/: tsconfig.json
typescript/src/: helloworld.ts  index.html
(+24 files in other folders)
